--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,204 @@
-# Run pip freeze to get requirements, just not on katy's machine!
+alabaster==0.7.12
+argon2-cffi==20.1.0
+astroid==2.5.2
+async-generator==1.10
+atomicwrites==1.4.0
+attrs==20.3.0
+Babel==2.9.0
+backcall==0.2.0
+beautifulsoup4==4.10.0
+bibtexparser==1.2.0
+bleach==3.3.0
+boto3==1.17.40
+Brotli==1.0.9
+cairocffi==1.2.0
+certifi==2021.10.8
+cffi==1.15.0
+chardet==4.0.0
+click==7.1.2
+click-plugins==1.1.1
+cligj==0.7.2
+command-not-found==0.3
+coverage==3.7.1
+coveralls==0.5
+cryptography==35.0.0
+cupshelpers==1.0
+cycler==0.10.0
+Cython==0.29.21
+dash==2.2.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+datascience==0.10.5
+dateutils==0.6.12
+dbus-python==1.2.16
+decorator==4.4.2
+defusedxml==0.7.1
+distro==1.4.0
+distro-info===0.23ubuntu1
+Django==2.0.2
+dnspython==2.1.0
+docopt==0.6.2
+docutils==0.16
+emoji==0.5.1
+entrypoints==0.3
+eventlet==0.25.2
+fail2ban==0.11.1
+fenics-dijitso==2019.1.0
+fenics-dolfin==2019.1.0
+fenics-ffc==2019.1.0.post0
+fenics-fiat==2019.1.0
+fenics-ufl==2019.1.0
+Fiona==1.8.21
+Flask==2.0.3
+Flask-Compress==1.9.0
+Flask-SocketIO==2.9.6
+folium==0.2.1
+future==0.18.2
+futures==3.1.1
+gdbgui==0.14.0.2
+geopandas==0.10.2
+geos==0.2.3
+gevent==1.5.0
+gevent-websocket==0.10.1
+Glances==3.1.3
+greenlet==0.4.16
+html5lib==1.1
+idna==3.1
+imagesize==1.2.0
+iotop==0.6
+ipykernel==5.5.0
+ipython==7.22.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+isort==5.8.0
+itsdangerous==2.1.0
+jedi==0.18.0
+jellyfish==0.8.2
+Jinja2==3.0.3
+jmespath==0.10.0
+jmespath-terminal==0.2.1
+joblib==1.0.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.12
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+kiwisolver==1.0.1
+language-selector==0.1
+lazy-object-proxy==1.6.0
+lxml==4.8.0
+MarkupSafe==2.1.0
+matplotlib==3.1.2
+mccabe==0.6.1
+meld==3.20.2
+mistune==0.8.4
+monotonic==1.5
+more-itertools==8.7.0
+mpi4py==3.0.3
+mpmath==1.1.0
+mrjob==0.7.4
+mshr==2019.1.0
+munch==2.5.0
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.5.1
+netifaces==0.10.4
+nltk==3.5
+nose==1.3.7
+notebook==6.3.0
+numpy==1.22.3
+packaging==20.9
+pandas==1.4.1
+pandocfilters==1.4.3
+parso==0.8.1
+petsc4py==3.12.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.0.0
+pkgconfig==1.5.1
+plotly==5.6.0
+pluggy==0.13.1
+ply==3.11
+prometheus-client==0.9.0
+prompt-toolkit==3.0.18
+psutil==5.6.2
+ptyprocess==0.7.0
+py==1.10.0
+pybind11==2.4.3
+pycairo==1.16.2
+pycodestyle==2.5.0
+pycparser==2.20
+pycrypto==2.6.1
+pycups==1.9.73
+pyfasta==0.5.2
+pygdbmi==0.10.0.0
+Pygments==2.8.1
+PyGObject==3.36.0
+pylint==2.7.4
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+pyproj==3.3.0
+pyrsistent==0.17.3
+pytest==3.9.1
+pytest-html==1.19.0
+pytest-json==0.4.0
+pytest-metadata==1.7.0
+pytest-timeout==1.3.2
+python-apt==2.0.0+ubuntu0.20.4.4
+python-dateutil==2.8.1
+python-engineio==3.14.2
+python-socketio==4.6.1
+pytz==2021.3
+PyYAML==5.4.1
+pyzmq==22.3.0
+qtconsole==5.0.3
+QtPy==1.9.0
+regex==2021.3.17
+reportlab==3.5.34
+requests==2.25.1
+s3transfer==0.3.6
+scikit-learn==1.0.2
+scipy==1.8.0
+seaborn==0.9.0
+selenium==3.141.0
+Send2Trash==1.5.0
+Shapely==1.8.1.post1
+six==1.15.0
+slepc4py==3.12.0
+snowballstemmer==2.1.0
+soupsieve==2.2.1
+Sphinx==3.5.3
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+ssh-import-id==5.10
+sympy==1.5.1
+tabulate==0.8.9
+tenacity==8.0.1
+terminado==0.9.4
+testpath==0.4.4
+textblob==0.17.1
+threadpoolctl==2.1.0
+toml==0.10.2
+tornado==6.1
+tqdm==4.59.0
+traitlets==5.0.5
+ubuntu-advantage-tools==20.3
+ufw==0.36
+urllib3==1.26.7
+urwid==1.2.2
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.0.3
+Whoosh==2.7.4
+widgetsnbextension==3.5.1
+wrapt==1.12.1
